force-app/main/default/objects/Player__c/fields/ImagePlayer__c.field-meta.xml
<CustomField>
    <fullName>ImagePlayer__c</fullName>
    <formula>IMAGE( Image__c ,  Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ImagePlayer</label>
    <type>Text</type>
</CustomField>