force-app/main/default/objects/Player__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Players position</description>
    <label>Position</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Goalkeeper</fullName>
            </value>
            <value>
                <fullName>Defense</fullName>
            </value>
            <value>
                <fullName>Midfield</fullName>
            </value>
            <value>
                <fullName>Forward</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>