force-app/main/default/objects/Player__c/fields/Weigth__c.field-meta.xml
<CustomField>
    <fullName>Weigth__c</fullName>
    <description>Weigth player</description>
    <label>Weight</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>